# dolphin

./: .gitignore  CMakeLists.txt
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/Common/Logging/: Log.h  LogManager.cpp
Source/Core/Core/: CMakeLists.txt  CoreTiming.cpp  CoreTiming.h
Source/Core/Core/PowerPC/: CPUApi.cpp  CPUApi.h  PowerPC.cpp
Source/Core/DolphinQt/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  ToolBar.cpp  ToolBar.h
Source/Core/DolphinQt/Config/: PluginsWindow.cpp  PluginsWindow.h
Source/Core/Plugins/: BasicGuiModule.cpp  BasicTypes.h  CMakeLists.txt  CpuModule.cpp  DiscoveryModule.cpp  LoggingModule.cpp  ModuleManager.cpp  ModuleManager.h  PluginHost.cpp  PluginHost.h  PluginManager.cpp  PluginManager.h
Source/Core/Plugins/PluginABI/: APIDiscovery.h  plugin.h
Source/Core/Plugins/PluginCpp/: BasicTypes.h  export.h
Source/Core/Scripting/: CMakeLists.txt  Scripting.vcxproj  Scripting.vcxproj.filters
Source/Core/Scripting/Python/: PyScriptingBackend.cpp
Source/Core/Scripting/Python/Modules/: doliomodule.cpp  dolphinmodule.cpp  filemodule.cpp  filemodule.h
Source/Core/UICommon/: UICommon.cpp
Source/Core/VideoCommon/: BasicGuiAPI.cpp  BasicGuiAPI.h  CMakeLists.txt  RenderBase.cpp
Source/LuaScriptHost/: CMakeLists.txt  callback_adaptor.cpp  callback_adaptor.h  class_adaptor.cpp  class_adaptor.h  discovery.h  function_adaptor.cpp  function_adaptor.h  plugin_main.cpp  test_discovery.cpp  test_discovery.h  type_adaptor.cpp  type_adaptor.h
scripts/mkwii/: MKW_Pointers.lua  MKW_core.lua  script.lua
